<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">ViKey</string>
    <string name="key__phone_pause" comment="Label for the Pause key in the telephone keyboard layout">Pause</string>
    <string name="key__phone_wait" comment="Label for the Wait key in the telephone keyboard layout">Wait</string>
    <string name="key_popup__threedots_alt" comment="Content description for the three-dots icon in a key popup">Three-dot icon. If visible, indicates that more letters can be used if longer pressed.</string>
    <string name="one_handed__close_btn_content_description" comment="Content description for the one-handed close button">Close one-handed mode.</string>
    <string name="one_handed__move_start_btn_content_description" comment="Content description for the one-handed move to left button">Move keyboard to the left.</string>
    <string name="one_handed__move_end_btn_content_description" comment="Content description for the one-handed move to right button">Move keyboard to the right.</string>
    <string name="settings__media__title">Emojis</string>
    <string name="media__tab__emojis" comment="Tab description for emojis in the media UI">Emojis</string>
    <string name="media__tab__emoticons" comment="Tab description for emoticons in the media UI">Emoticons</string>
    <string name="media__tab__kaomoji" comment="Tab description for kaomoji in the media UI">Kaomoji</string>
    <string name="prefs__media__emoji_preferred_skin_tone">Preferred emoji skin tone</string>
    <string name="prefs__media__emoji_preferred_hair_style">Preferred emoji hair style</string>
    <string name="prefs__media__emoji_history__title" comment="Preference group title">Emoji history</string>
    <string name="prefs__media__emoji_history_enabled" comment="Preference title">Enable emoji history</string>
    <string name="prefs__media__emoji_history_enabled__summary" comment="Preference summary">Retain recently used emojis for quick access</string>
    <string name="prefs__media__emoji_history_pinned_update_strategy" comment="Preference title">Update strategy (Pinned)</string>
    <string name="prefs__media__emoji_history_recent_update_strategy" comment="Preference title">Update strategy (Recent)</string>
    <string name="prefs__media__emoji_history_max_size">Maximum items to keep</string>
    <string name="prefs__media__emoji_history_pinned_reset">Reset pinned emojis</string>
    <string name="prefs__media__emoji_history_reset">Reset recent emojis</string>
    <string name="prefs__media__emoji_suggestion__title" comment="Preference group title">Emoji suggestions</string>
    <string name="prefs__media__emoji_suggestion_enabled" comment="Preference title">Enable emoji suggestions</string>
    <string name="prefs__media__emoji_suggestion_enabled__summary" comment="Preference summary">Provide emoji suggestions while you type</string>
    <string name="prefs__media__emoji_font" comment="Preference title">Emoji font</string>
    <string name="prefs__media__emoji_suggestion_type" comment="Preference title">Trigger type</string>
    <string name="prefs__media__emoji_suggestion_update_history" comment="Preference title">Update emoji history</string>
    <string name="prefs__media__emoji_suggestion_update_history__summary" comment="Preference summary">Accepting suggested emojis adds them to the emoji history</string>
    <string name="prefs__media__emoji_suggestion_candidate_show_name" comment="Preference title">Show emoji name</string>
    <string name="prefs__media__emoji_suggestion_candidate_show_name__summary" comment="Preference summary">Emoji suggestions display their name alongside the emoji</string>
    <string name="prefs__media__emoji_suggestion_query_min_length" comment="Preference title">Minimum query length</string>
    <string name="prefs__media__emoji_suggestion_candidate_max_count" comment="Preference title">Maximum candidate count</string>
    <string name="emoji__category__smileys_emotion" comment="Emoji category name">Smileys &amp; Emotions</string>
    <string name="emoji__category__people_body" comment="Emoji category name">People &amp; Body</string>
    <string name="emoji__category__animals_nature" comment="Emoji category name">Animals &amp; Nature</string>
    <string name="emoji__category__food_drink" comment="Emoji category name">Food &amp; Drink</string>
    <string name="emoji__category__travel_places" comment="Emoji category name">Travel &amp; Places</string>
    <string name="emoji__category__activities" comment="Emoji category name">Activities</string>
    <string name="emoji__category__objects" comment="Emoji category name">Objects</string>
    <string name="emoji__category__symbols" comment="Emoji category name">Symbols</string>
    <string name="emoji__category__flags" comment="Emoji category name">Flags</string>
    <string name="emoji__history__empty_message" comment="Message if the emoji history is empty">No recently used emojis found. Once you start typing emojis they will automatically appear here.</string>
    <string name="emoji__history__phone_locked_message" comment="Message to show if phone is locked">To access your emoji history, please first unlock your device.</string>
    <string name="emoji__history__usage_tip" comment="Feature discoverability for actions of emoji history">Pro tip: Long press emojis in the emoji history to pin or remove them!</string>
    <string name="emoji__history__removal_success_message" comment="Toast message if user has used the delete action on an emoji in the emoji history">Removed {emoji} from emoji history</string>
    <string name="emoji__history__pinned">Pinned</string>
    <string name="emoji__history__recent">Recent</string>
    <string name="quick_action__arrow_up" comment="Please mind the limited available space for the quick action strings">Arrow up</string>
    <string name="quick_action__arrow_up__tooltip">Perform arrow up</string>
    <string name="quick_action__arrow_down" comment="Please mind the limited available space for the quick action strings">Arrow down</string>
    <string name="quick_action__arrow_down__tooltip">Perform arrow down</string>
    <string name="quick_action__arrow_left" comment="Please mind the limited available space for the quick action strings">Arrow left</string>
    <string name="quick_action__arrow_left__tooltip">Perform arrow left</string>
    <string name="quick_action__arrow_right" comment="Please mind the limited available space for the quick action strings">Arrow right</string>
    <string name="quick_action__arrow_right__tooltip">Perform arrow right</string>
    <string name="quick_action__ime_hide_ui" comment="Please mind the limited available space for the quick action strings">Hide keyboard</string>
    <string name="quick_action__ime_hide_ui__tooltip">Perform hide keyboard</string>
    <string name="quick_action__clipboard_clear_primary_clip" comment="Please mind the limited available space for the quick action strings">Clear primary clipboard clip</string>
    <string name="quick_action__clipboard_clear_primary_clip__tooltip">Perform clear primary clipboard clip</string>
    <string name="quick_action__clipboard_copy" comment="Please mind the limited available space for the quick action strings">Copy</string>
    <string name="quick_action__clipboard_copy__tooltip">Perform clipboard copy</string>
    <string name="quick_action__clipboard_cut" comment="Please mind the limited available space for the quick action strings">Cut</string>
    <string name="quick_action__clipboard_cut__tooltip">Perform clipboard cut</string>
    <string name="quick_action__clipboard_paste" comment="Please mind the limited available space for the quick action strings">Paste</string>
    <string name="quick_action__clipboard_paste__tooltip">Perform clipboard paste</string>
    <string name="quick_action__clipboard_select_all" comment="Please mind the limited available space for the quick action strings">Select all</string>
    <string name="quick_action__clipboard_select_all__tooltip">Perform clipboard select all</string>
    <string name="quick_action__forward_delete" comment="Please mind the limited available space for the quick action strings">Forward delete</string>
    <string name="quick_action__ime_ui_mode_clipboard" comment="Please mind the limited available space for the quick action strings">Clipboard</string>
    <string name="quick_action__ime_ui_mode_clipboard__tooltip">Open clipboard history</string>
    <string name="quick_action__ime_ui_mode_media" comment="Please mind the limited available space for the quick action strings">Emoji</string>
    <string name="quick_action__ime_ui_mode_media__tooltip">Open emoji panel</string>
    <string name="quick_action__language_switch" comment="Please mind the limited available space for the quick action strings">Switch language</string>
    <string name="quick_action__language_switch__tooltip">Perform language switch</string>
    <string name="quick_action__settings" comment="Please mind the limited available space for the quick action strings">Settings</string>
    <string name="quick_action__settings__tooltip">Open settings</string>
    <string name="quick_action__undo" comment="Please mind the limited available space for the quick action strings">Undo</string>
    <string name="quick_action__undo__tooltip">Undo the last input</string>
    <string name="quick_action__redo" comment="Please mind the limited available space for the quick action strings">Redo</string>
    <string name="quick_action__redo__tooltip">Redo the last input</string>
    <string name="quick_action__toggle_actions_overflow" comment="Please mind the limited available space for the quick action strings">More actions</string>
    <string name="quick_action__toggle_actions_overflow__tooltip">Show or hide additional actions</string>
    <string name="quick_action__toggle_incognito_mode" comment="Please mind the limited available space for the quick action strings">Incognito</string>
    <string name="quick_action__toggle_incognito_mode__tooltip">Toggle incognito mode</string>
    <string name="quick_action__toggle_autocorrect" comment="Please mind the limited available space for the quick action strings">Autocorrect</string>
    <string name="quick_action__toggle_autocorrect__tooltip">Toggle autocorrect</string>
    <string name="quick_action__voice_input" comment="Please mind the limited available space for the quick action strings">Voice input</string>
    <string name="quick_action__voice_input__tooltip" comment="IME stands for Input Method Editor and is indirectly equivalent to 'keyboard'.">Open voice input provider</string>
    <string name="crash_dialog__title" comment="Title of crash dialog">ViKey error report</string>
    <string name="crash_dialog__description" comment="Description of crash dialog">Sorry for the inconvenience, but ViKey has crashed due to an unexpected error.</string>
    <string name="crash_dialog__report_instructions" comment="Issue tracker report instructions for the crash dialog. The %s placeholder is the name of the crash report template and always in English/LTR.">If you wish to report this error, first check out the issue tracker on GitHub if your crash has not already been reported.\nIf it hasn\'t, copy the generated crash log and open a new issue. Use the \"%s\" template and fill out the description, the steps to reproduce, and paste the generated crash log at the end. This helps in making ViKey better and more stable for everyone. Thank you!</string>
    <string name="crash_dialog__copy_to_clipboard" comment="Label of Copy to clipboard button in crash dialog">Copy to system clipboard</string>
    <string name="crash_dialog__open_issue_tracker" comment="Label of Open issue tracker button in crash dialog">Open issue tracker (github.com)</string>
    <string name="crash_dialog__close" comment="Label of Close button in crash dialog">Close</string>
</resources>